toggle anchor tag updated

--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "tailwindcss": "^3.4.17"
   },
 
-  "homepage": "https://AnupritaBarge.github.io/home"
+  "homepage": "https://AnupritaBarge.github.io/Portfolio"
 
 }
